--- a/best-practices/disallow_bind_mounts.yaml
+++ b/best-practices/disallow_bind_mounts.yaml
@@ -4,7 +4,8 @@ metadata:
   name: disallow-bind-mounts
   annotations:
     policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: The volume of type `hostPath` allows pods to use host bind 
+    policies.kyverno.io/description: >-
+      The volume of type `hostPath` allows pods to use host bind 
       mounts (i.e. directories and volumes mounted to a host path) in containers. Using host 
       resources can be used to access shared data or escalate privileges. Also, this couples pods 
       to a specific host and data persisted in the `hostPath` volume is coupled to the life of the 
@@ -19,7 +20,7 @@ spec:
         kinds: 
         - Pod
     validate: 
-      message: "Host path volumes are not allowed"
+      message: "Host path volumes are not allowed."
       pattern: 
         spec: 
           =(volumes): 
