--- a/best-practices/disallow_helm_tiller.yaml
+++ b/best-practices/disallow_helm_tiller.yaml
@@ -4,8 +4,10 @@ metadata:
   name: disallow-helm-tiller
   annotations:
     policies.kyverno.io/category: Security
-    policies.kyverno.io/description: Tiller has known security challenges. It requires administrative privileges and acts as a shared
-      resource accessible to any authenticated user. Tiller can lead to privilge escalation as restricted users can impact other users.
+    policies.kyverno.io/description: >-
+      Tiller has known security challenges. It requires administrative
+      privileges and acts as a shared resource accessible to any authenticated user.
+      Tiller can lead to privilege escalation as restricted users can impact other users.
 spec:
   validationFailureAction: audit
   rules:
@@ -15,9 +17,8 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Helm Tiller is not allowed"  
+      message: "Helm Tiller is not allowed."  
       pattern:
         spec:
           containers:
-          - name: "*"
-            image: "!*tiller*"
+          - image: "!*tiller*"
