--- a/best-practices/disallow_sysctls.yaml
+++ b/best-practices/disallow_sysctls.yaml
@@ -4,8 +4,9 @@ metadata:
   name: disallow-sysctls
   annotations:
     policies.kyverno.io/category: Security
-    policies.kyverno.io/description: The Sysctl interface allows modifications to kernel parameters 
-      at runtime. In a Kubernetes pod these parameters can be specified under `securityContext.sysctls`. 
+    policies.kyverno.io/description: >-
+      The Sysctl interface allows modifications to kernel parameters 
+      at runtime. In a Kubernetes pod, these parameters can be specified under `securityContext.sysctls`. 
       Kernel parameter modifications can be used for exploits and should be restricted.
 spec:
   validationFailureAction: audit
@@ -16,7 +17,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Changes to kernel parameters are not allowed"
+      message: "Changes to kernel parameters are not allowed."
       pattern:
         spec:
           =(securityContext):
