--- a/other/restrict_image_registries.yaml
+++ b/other/restrict_image_registries.yaml
@@ -4,7 +4,8 @@ metadata:
   name: restrict-image-registries
   annotations:
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: Images from unknown registries may not be scanned and secured. 
+    policies.kyverno.io/description: >-
+      Images from unknown registries may not be scanned and secured. 
       Requiring use of known registries helps reduce threat exposure.
 spec:
   validationFailureAction: audit
