--- a/other/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer.yaml
@@ -2,6 +2,15 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: no-loadbalancers
+  annotations:
+    policies.kyverno.io/category: Other
+    policies.kyverno.io/description: >-
+      A Kubernetes service of type LoadBalancer typically requires the use
+      of a cloud provider to realize the infrastructure on the backend.
+      Doing so has the side effect of increased cost and potentially bypassing
+      existing Ingress resource(s) which are preferred methods of issuing traffic
+      to a Kubernetes cluster. The use of Services of type LoadBalancer should
+      therefore be carefully controlled or restricted across the cluster.
 spec:
   validationFailureAction: audit
   rules:
