--- a/other/restrict_usergroup_fsgroup_id.yaml
+++ b/other/restrict_usergroup_fsgroup_id.yaml
@@ -4,7 +4,8 @@ metadata:
   name: validate-userid-groupid-fsgroup
   annotations:
     policies.kyverno.io/category: Security Context
-    policies.kyverno.io/description: All processes inside the pod can be made to run with specific user 
+    policies.kyverno.io/description: >-
+      All processes inside the pod can be made to run with specific user 
       and groupID by setting 'runAsUser' and 'runAsGroup' respectively. 'fsGroup' can be specified 
       to make sure any file created in the volume with have the specified groupID. These options can be 
       used to validate the IDs used for user and group.
@@ -16,7 +17,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "User ID should be 1000"
+      message: "User ID should be 1000."
       pattern:
         spec:
           securityContext:
@@ -27,7 +28,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Group ID should be 3000"
+      message: "Group ID should be 3000."
       pattern:
         spec:
           securityContext:
@@ -38,7 +39,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "fsgroup should be 2000"
+      message: "fsgroup should be 2000."
       pattern:
         spec:
           securityContext:
