--- a/best-practices/add_network_policy.yaml
+++ b/best-practices/add_network_policy.yaml
@@ -4,9 +4,10 @@ metadata:
   name: add-networkpolicy
   annotations:
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: By default, Kubernetes allows communications across 
+    policies.kyverno.io/description: >-
+      By default, Kubernetes allows communications across 
       all pods within a cluster. Network policies and, a CNI that supports network policies, 
-      must be used to restrict communinications. A default NetworkPolicy should be configured 
+      must be used to restrict communications. A default NetworkPolicy should be configured 
       for each namespace to default deny all ingress traffic to the pods in the namespace. 
       Application teams can then configure additional NetworkPolicy resources to allow 
       desired traffic to application pods from select sources.
@@ -18,14 +19,13 @@ spec:
       resources: 
         kinds:
         - Namespace
-        name: "*"
     exclude:
       resources:
         namespaces:
-          - "kube-system"
-          - "default"
-          - "kube-public"
-          - "kyverno"
+          - kube-system
+          - default
+          - kube-public
+          - kyverno
     generate: 
       kind: NetworkPolicy
       name: default-deny-ingress
