--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -4,7 +4,8 @@ metadata:
   name: add-safe-to-evict
   annotations:
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: The Kubernetes cluster autoscaler does not evict pods that 
+    policies.kyverno.io/description: >-
+      The Kubernetes cluster autoscaler does not evict pods that 
       use hostPath or emptyDir volumes. To allow eviction of these pods, the annotation 
       cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to the pods. 
 spec: 
