--- a/best-practices/disallow_host_pid_ipc.yaml
+++ b/best-practices/disallow_host_pid_ipc.yaml
@@ -4,9 +4,10 @@ metadata:
   name: disallow-host-pid-ipc
   annotations:
     policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: Sharing the host's PID namespace allows visibility of process 
-      on the host, potentially exposing process information. Sharing the host's IPC namespace allows 
-      the container process to communicate with processes on the host. To avoid pod container from 
+    policies.kyverno.io/description: >-
+      Sharing the host's PID namespace allows visibility of host processes, potentially
+      exposing process information. Sharing the host's IPC namespace allows 
+      the container process to communicate with processes on the host. To avoid a pod container from 
       having visibility to host process space, validate that 'hostPID' and 'hostIPC' are set to 'false'.
 spec:
   validationFailureAction: audit
@@ -17,7 +18,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Use of host PID and IPC namespaces is not allowed"
+      message: "Use of host PID and IPC namespaces is not allowed."
       pattern:
         spec:
           =(hostPID): "false"
