--- a/best-practices/disallow_latest_tag.yaml
+++ b/best-practices/disallow_latest_tag.yaml
@@ -4,7 +4,8 @@ metadata:
   name: disallow-latest-tag
   annotations:
     policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: The ':latest' tag is mutable and can lead to 
+    policies.kyverno.io/description: >-
+      The ':latest' tag is mutable and can lead to 
       unexpected errors if the image changes. A best practice is to use an immutable 
       tag that maps to a specific version of an application pod.
 spec:
@@ -16,7 +17,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "An image tag is required"  
+      message: "An image tag is required."  
       pattern:
         spec:
           containers:
@@ -27,7 +28,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Using a mutable image tag e.g. 'latest' is not allowed"
+      message: "Using a mutable image tag e.g. 'latest' is not allowed."
       pattern:
         spec:
           containers:
