--- a/best-practices/disallow_root_user.yaml
+++ b/best-practices/disallow_root_user.yaml
@@ -4,10 +4,11 @@ metadata:
   name: disallow-root-user
   annotations:
     policies.kyverno.io/category: Security
-    policies.kyverno.io/description: By default, processes in a container run as a 
-      root user (uid 0). To prevent potential compromise of container hosts, specify a 
-      least privileged user ID when building the container image and require that 
-      application containers run as non root users.
+    policies.kyverno.io/description: >-
+      By default, processes in a container run as a root user (uid 0).
+      To prevent potential compromise of container hosts, specify a least
+      privileged user ID when building the container image and require that 
+      application containers run as non-root users.
 spec:
   validationFailureAction: audit
   rules:
@@ -17,7 +18,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Running as root is not allowed. Set runAsNonRoot to true, or use runAsUser"
+      message: "Running as root is not allowed. Set runAsNonRoot to true, or use runAsUser."
       anyPattern:
       - spec:
           securityContext:
