--- a/best-practices/require_certain_labels.yaml
+++ b/best-practices/require_certain_labels.yaml
@@ -2,6 +2,14 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: require-certain-labels
+  annotations:
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      In many cases, you may require that at least a certain number of labels
+      are assigned to each Pod from a select list of approved labels. This sample
+      policy demonstrates the anyPattern option in a policy by requiring any of
+      the two possible labels defined within. A pod must either have the label
+      app.kubernetes.io/name or app.kubernetes.io/component defined.
 spec:
   validationFailureAction: audit
   rules:
