--- a/best-practices/require_labels.yaml
+++ b/best-practices/require_labels.yaml
@@ -2,6 +2,13 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: require-labels
+  annotations:
+    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/description: >-
+      Labels are a fundamental and important way to assign descriptive metadata
+      to Kubernetes resources, especially Pods. Labels are especially
+      important as the number of applications grow and are composed in different ways.
+      This sample policy requires that the label app.kubernetes.io/name be defined on all Pods.
 spec:
   validationFailureAction: audit
   rules:
@@ -16,5 +23,6 @@ spec:
         metadata:
           labels:
             app.kubernetes.io/name: "?*"
-            # You can add more labels if you wish the policy to validate more than just one is present. Uncomment the below line, or add new ones.
+            # You can add more labels if you wish the policy to validate more than just one is present.
+            # Uncomment the below line, or add new ones.
             #app.kubernetes.io/component: "?*
