--- a/best-practices/require_pod_requests_limits.yaml
+++ b/best-practices/require_pod_requests_limits.yaml
@@ -4,7 +4,8 @@ metadata:
   name: require-pod-requests-limits
   annotations:
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: As application workloads share cluster resources, it is important 
+    policies.kyverno.io/description: >-
+      As application workloads share cluster resources, it is important 
       to limit resources requested and consumed by each pod. It is recommended to require 
       'resources.requests' and 'resources.limits.memory' per pod. If a namespace level request or limit is 
       specified, defaults will automatically be applied to each pod based on the 'LimitRange' configuration.
@@ -17,7 +18,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "CPU and memory resource requests and limits are required"
+      message: "CPU and memory resource requests and limits are required."
       pattern:
         spec:
           containers:
@@ -27,3 +28,4 @@ spec:
                 cpu: "?*"
               limits:
                 memory: "?*"
+                # CPU limits are intentionally omitted here as a best practice.
