--- a/best-practices/require_probes.yaml
+++ b/best-practices/require_probes.yaml
@@ -5,8 +5,9 @@ metadata:
   annotations:
     pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,StatefulSet
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: Liveness and readiness probes need to be configured to 
-      correctly manage a pods lifecycle during deployments, restarts, and upgrades. For each 
+    policies.kyverno.io/description: >-
+      Liveness and readiness probes need to be configured to 
+      correctly manage a pod's lifecycle during deployments, restarts, and upgrades. For each 
       pod, a periodic `livenessProbe` is performed by the kubelet to determine if the pod's 
       containers are running or need to be restarted. A `readinessProbe` is used by services 
       and deployments to determine if the pod is ready to receive network traffic.
@@ -19,7 +20,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Liveness and readiness probes are required"
+      message: "Liveness and readiness probes are required."
       pattern:
         spec:
           containers:
