--- a/other/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars.yaml
@@ -2,15 +2,24 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: secrets-not-from-env-vars
+  annotations:
+    policies.kyverno.io/category: Other
+    policies.kyverno.io/description: >-
+      Secrets in Kubernetes are often sensitive pieces of information
+      whose content should be protected. Although they can be used in
+      many ways, when mounting them as environment variables, some
+      applications can write their values to STDOUT revealing this
+      sensitive information in log files and potentially other exposure.
+      As a best practice, Kubernetes Secrets should be mounted instead as volumes.
 spec:
   background: false
   validationFailureAction: audit
   rules:
   - name: secrets-not-from-env-vars
     match:
-    resources:
-        kinds:
-        - Pod
+      resources:
+          kinds:
+          - Pod
     validate:
       message: "Secrets must be mounted as volumes, not as environment variables."
       pattern:
