--- a/other/restrict_ingress_classes.yaml
+++ b/other/restrict_ingress_classes.yaml
@@ -1,10 +1,11 @@
-apiVersion : kyverno.io/v1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: restrict-ingress-classes
   annotations:
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/description: It can be useful to restrict Ingress resources to a set of 
+    policies.kyverno.io/description: >-
+      It can be useful to restrict Ingress resources to a set of 
       known ingress classes that are allowed in the cluster. You can customize this policy to 
       allow ingress classes that are configured in the cluster.
 spec:
@@ -15,7 +16,7 @@ spec:
         kinds:
         - Ingress
     validate:
-      message: "Unknown ingress class"
+      message: "Unknown ingress class."
       pattern:
         metadata:
           annotations:
