--- a/other/restrict_node_port.yaml
+++ b/other/restrict_node_port.yaml
@@ -4,9 +4,10 @@ metadata:
   name: restrict-nodeport
   annotations:
     policies.kyverno.io/category: Workload Isolation
-    policies.kyverno.io/description: A Kubernetes service of type NodePort uses a 
-      host port to receive traffic from any source. A 'NetworkPolicy' resource cannot be used 
-      to control traffic to host ports. Although 'NodePort' services can be useful, their use 
+    policies.kyverno.io/description: >-
+      A Kubernetes service of type NodePort uses a 
+      host port to receive traffic from any source. A NetworkPolicy resource cannot be used 
+      to control traffic to host ports. Although NodePort services can be useful, their use 
       must be limited to services with additional upstream security checks.
 spec:
   rules:
@@ -16,7 +17,7 @@ spec:
         kinds:
         - Service
     validate:
-      message: "Services of type NodePort are not allowed"
+      message: "Services of type NodePort are not allowed."
       pattern: 
         spec:
           type: "!NodePort"
