--- a/pod-security/restricted/require-run-as-nonroot.yaml
+++ b/pod-security/restricted/require-run-as-nonroot.yaml
@@ -4,7 +4,8 @@ metadata:
   name: require-run-as-non-root
   annotations:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
-    policies.kyverno.io/description: Containers must be required to run as non-root users.
+    policies.kyverno.io/description: >-
+      Containers must be required to run as non-root users.
 spec:
   background: true
   validationFailureAction: audit
