--- a/best-practices/disallow_default_namespace.yaml
+++ b/best-practices/disallow_default_namespace.yaml
@@ -19,7 +19,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Using 'default' namespace is not allowed"
+      message: "Using 'default' namespace is not allowed."
       pattern:
         metadata:
           namespace: "!default"
@@ -29,7 +29,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "A namespace is required"
+      message: "A namespace is required."
       pattern:
         metadata:
           namespace: "?*"
@@ -42,7 +42,7 @@ spec:
         - Job
         - StatefulSet
     validate:
-      message: "Using 'default' namespace is not allowed for podcontrollers"
+      message: "Using 'default' namespace is not allowed for pod controllers."
       pattern:
         metadata:
           namespace: "!default"
@@ -55,8 +55,7 @@ spec:
         - Job
         - StatefulSet
     validate:
-      message: "A namespace is required for podcontrollers"
+      message: "A namespace is required for pod controllers."
       pattern:
         metadata:
           namespace: "?*"
-
