--- a/best-practices/require_pod_requests_limits.yaml
+++ b/best-practices/require_pod_requests_limits.yaml
@@ -19,7 +19,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "CPU and memory resource requests and limits are required"
+      message: "CPU and memory resource requests and limits are required."
       pattern:
         spec:
           containers:
