--- a/best-practices/require_ro_rootfs.yaml
+++ b/best-practices/require_ro_rootfs.yaml
@@ -19,7 +19,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Root filesystem must be read-only"
+      message: "Root filesystem must be read-only."
       pattern:
         spec:
           containers:
