--- a/best-practices/restrict_node_port.yaml
+++ b/best-practices/restrict_node_port.yaml
@@ -18,8 +18,7 @@ spec:
         kinds:
         - Service
     validate:
-      message: "Services of type NodePort are not allowed"
+      message: "Services of type NodePort are not allowed."
       pattern: 
         spec:
           type: "!NodePort"
-
