--- a/best-practices/add_network_policy.yaml
+++ b/best-practices/add_network_policy.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/description: >-
       By default, Kubernetes allows communications across all pods within a cluster. 
       Network policies and, a CNI that supports network policies, must be used to restrict 
-      communinications. A default NetworkPolicy should be configured for each namespace to 
+      communications. A default NetworkPolicy should be configured for each namespace to 
       default deny all ingress and egress traffic to the pods in the namespace. Application 
       teams can then configure additional NetworkPolicy resources to allow desired traffic 
       to application pods from select sources.
@@ -20,12 +20,11 @@ spec:
       resources: 
         kinds:
         - Namespace
-        name: "*"
     generate:
       kind: NetworkPolicy
       name: default-deny
       namespace: "{{request.object.metadata.name}}"
-      synchronize : true
+      synchronize: true
       data:
         spec:
           # select all pods in the namespace
