--- a/best-practices/disallow_helm_tiller.yaml
+++ b/best-practices/disallow_helm_tiller.yaml
@@ -1,4 +1,4 @@
-apiVersion : kyverno.io/v1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: disallow-helm-tiller
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/description: >-
       Tiller has known security challenges. It requires administrative privileges and 
       acts as a shared resource accessible to any authenticated user. Tiller can lead 
-      to privilge escalation as restricted users can impact other users.
+      to privilege escalation as restricted users can impact other users.
 spec:
   validationFailureAction: audit
   rules:
@@ -17,9 +17,8 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "Helm Tiller is not allowed"  
+      message: "Helm Tiller is not allowed."  
       pattern:
         spec:
           containers:
-          - name: "*"
-            image: "!*tiller*"
+          - image: "!*tiller*"
