--- a/best-practices/restrict-service-external-ips.yaml
+++ b/best-practices/restrict-service-external-ips.yaml
@@ -18,7 +18,7 @@ spec:
         kinds:
         - Service
     validate:
-      message: "externalIPs are not allowed"
+      message: "externalIPs are not allowed."
       pattern:
         spec:
           # restrict external IP addresses
